--- a/libs/core/util/environments/project.json
+++ b/libs/core/util/environments/project.json
@@ -6,7 +6,7 @@
   "prefix": "plastik",
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["libs/core/util/environments/**/*.ts", "libs/core/util/environments/**/*.html"]
       }
