--- a/libs/nasa-images/search/ui/no-results/project.json
+++ b/libs/nasa-images/search/ui/no-results/project.json
@@ -6,7 +6,7 @@
   "prefix": "plastik",
   "targets": {
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/nasa-images/search/ui/no-results/jest.config.ts",
@@ -20,7 +20,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/nasa-images/search/ui/no-results/**/*.ts", "libs/nasa-images/search/ui/no-results/**/*.html"]
