--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
-  "plugins": ["@nrwl/nx", "deprecation", "jsdoc"],
+  "plugins": ["@nx", "deprecation", "jsdoc", "@angular-eslint"],
   "parserOptions": {
     "project": ["./tsconfig.base.json"]
   },
@@ -9,7 +9,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        "@nrwl/nx/enforce-module-boundaries": [
+        "@nx/enforce-module-boundaries": [
           "error",
           {
             "enforceBuildableLibDependency": true,
@@ -58,22 +58,22 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nrwl/nx/typescript"],
+      "extends": ["plugin:@nx/typescript"],
       "rules": {
-        "no-console": 2,
-        "@typescript-eslint/prefer-readonly": 2
+        "no-console": "error",
+        "@typescript-eslint/prefer-readonly": "error"
       }
     },
     {
       "files": ["*.ts"],
       "extends": ["plugin:ngrx/recommended"],
       "rules": {
-        "ngrx/select-style": 2
+        "ngrx/select-style": "error"
       }
     },
     {
       "files": ["*.js", "*.jsx"],
-      "extends": ["plugin:@nrwl/nx/javascript"],
+      "extends": ["plugin:@nx/javascript"],
       "rules": {}
     },
     {
@@ -103,39 +103,45 @@
     },
     {
       "files": ["*.html"],
-      "extends": ["plugin:@angular-eslint/template/recommended"],
+      "extends": ["plugin:@angular-eslint/template/recommended", "plugin:@angular-eslint/template/accessibility"],
       "rules": {
-        "@angular-eslint/template/no-positive-tabindex": 2,
-        "@angular-eslint/template/no-autofocus": 2,
-        "@angular-eslint/template/mouse-events-have-key-events": 2,
-        "@angular-eslint/template/click-events-have-key-events": 2,
-        "@angular-eslint/template/accessibility-interactive-supports-focus": 2,
-        "@angular-eslint/template/accessibility-valid-aria": 2,
-        "@angular-eslint/template/accessibility-role-has-required-aria": 2,
-        "@angular-eslint/template/accessibility-label-for": 2,
-        "@angular-eslint/template/accessibility-label-has-associated-control": 2,
-        "@angular-eslint/template/accessibility-alt-text": 2,
-        "@angular-eslint/template/accessibility-elements-content": 2,
-        "@angular-eslint/template/accessibility-table-scope": 2,
-        "@angular-eslint/template/no-any": 2,
-        "@angular-eslint/no-input-prefix": 2,
-        "@angular-eslint/use-lifecycle-interface": 2,
-        "@angular-eslint/prefer-output-readonly": 2,
-        "@angular-eslint/component-max-inline-declarations": 2,
-        "@angular-eslint/template/no-call-expression": 2,
-        "@angular-eslint/template/use-track-by-function": 2,
-        "@angular-eslint/use-pipe-transform-interface": 2,
-        "@angular-eslint/no-conflicting-lifecycle": 2,
-        "@angular-eslint/relative-url-prefix": 2,
-        "@angular-eslint/use-component-selector": 2,
-        "@angular-eslint/template/conditional-complexity": 2,
-        "@angular-eslint/use-injectable-provided-in": 2,
-        "@angular-eslint/no-host-metadata-property": 2,
-        "@angular-eslint/no-inputs-metadata-property": 2,
-        "@angular-eslint/no-outputs-metadata-property": 2,
-        "@angular-eslint/no-queries-metadata-property": 2,
-        "@angular-eslint/template/no-distracting-elements": 2,
-        "@angular-eslint/component-class-suffix": 2
+        "@angular-eslint/template/no-positive-tabindex": "error",
+        "@angular-eslint/template/alt-text": "error",
+        "@angular-eslint/template/click-events-have-key-events": "error",
+        "@angular-eslint/template/elements-content": "error",
+        "@angular-eslint/template/interactive-supports-focus": "error",
+        "@angular-eslint/template/label-has-associated-control": "error",
+        "@angular-eslint/template/mouse-events-have-key-events": "error",
+        "@angular-eslint/template/no-autofocus": "error",
+        "@angular-eslint/template/role-has-required-aria": "error",
+        "@angular-eslint/template/table-scope": "error",
+        "@angular-eslint/template/valid-aria": "error",
+        "@angular-eslint/template/no-any": "error",
+        "@angular-eslint/template/no-duplicate-attributes": "error",
+        "@angular-eslint/no-input-prefix": "error",
+        "@angular-eslint/use-lifecycle-interface": "error",
+        "@angular-eslint/prefer-output-readonly": "error",
+        "@angular-eslint/component-max-inline-declarations": "error",
+        "@angular-eslint/template/no-call-expression": "error",
+        "@angular-eslint/template/use-track-by-function": "error",
+        "@angular-eslint/use-pipe-transform-interface": "error",
+        "@angular-eslint/no-conflicting-lifecycle": "error",
+        "@angular-eslint/relative-url-prefix": "error",
+        "@angular-eslint/use-component-selector": "error",
+        "@angular-eslint/template/conditional-complexity": "error",
+        "@angular-eslint/use-injectable-provided-in": "error",
+        "@angular-eslint/no-host-metadata-property": "error",
+        "@angular-eslint/no-inputs-metadata-property": "error",
+        "@angular-eslint/no-outputs-metadata-property": "error",
+        "@angular-eslint/no-queries-metadata-property": "error",
+        "@angular-eslint/template/no-distracting-elements": "error",
+        "@angular-eslint/component-class-suffix": "error",
+        "@angular-eslint/no-empty-lifecycle-method": "error",
+        "@angular-eslint/template/attributes-order": "error",
+        "@angular-eslint/template/banana-in-box": "error",
+        "@angular-eslint/template/eqeqeq": "error",
+        "@angular-eslint/template/no-interpolation-in-attributes": "error",
+        "@angular-eslint/template/no-negated-async": "error"
       }
     }
   ]
