--- a/libs/core/cms-layout/ui/header/project.json
+++ b/libs/core/cms-layout/ui/header/project.json
@@ -6,7 +6,7 @@
   "prefix": "plastik",
   "targets": {
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/core/cms-layout/ui/header/jest.config.ts",
@@ -14,7 +14,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/core/cms-layout/ui/header/**/*.ts", "libs/core/cms-layout/ui/header/**/*.html"]
