--- a/libs/shared/form/feature/project.json
+++ b/libs/shared/form/feature/project.json
@@ -6,7 +6,7 @@
   "prefix": "plastik",
   "targets": {
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/shared/form/feature/jest.config.ts",
@@ -20,7 +20,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/shared/form/feature/**/*.ts", "libs/shared/form/feature/**/*.html"]
