--- a/libs/shared/util/entities/project.json
+++ b/libs/shared/util/entities/project.json
@@ -6,7 +6,7 @@
   "prefix": "plastik",
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/shared/util/entities/**/*.ts", "libs/shared/util/entities/**/*.html"]
