--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
+    "postinstall": "node ./decorate-angular-cli.js",
     "start": "nx serve",
     "build": "nx run-many --target=build --all --parallel",
     "test": "nx test",
@@ -50,64 +50,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.2.1",
-    "@angular/cdk": "15.2.1",
-    "@angular/common": "15.2.1",
-    "@angular/compiler": "15.2.1",
-    "@angular/core": "15.2.1",
-    "@angular/forms": "15.2.1",
-    "@angular/material": "15.2.1",
-    "@angular/platform-browser": "15.2.1",
-    "@angular/platform-browser-dynamic": "15.2.1",
-    "@angular/router": "15.2.1",
-    "@ngrx/component": "15.3.0",
-    "@ngrx/component-store": "15.3.0",
-    "@ngrx/effects": "15.3.0",
-    "@ngrx/entity": "15.3.0",
-    "@ngrx/router-store": "15.3.0",
-    "@ngrx/store": "15.3.0",
-    "@ngx-formly/core": "^6.1.3",
-    "@ngx-formly/material": "^6.1.3",
-    "@nrwl/angular": "15.8.5",
-    "@nrwl/nx-cloud": "^15.3.4",
+    "@angular/animations": "16.0.0",
+    "@angular/cdk": "16.0.0",
+    "@angular/common": "16.0.0",
+    "@angular/compiler": "16.0.0",
+    "@angular/core": "16.0.0",
+    "@angular/forms": "16.0.0",
+    "@angular/material": "16.0.0",
+    "@angular/platform-browser": "16.0.0",
+    "@angular/platform-browser-dynamic": "16.0.0",
+    "@angular/router": "16.0.0",
+    "@ngrx/component": "15.4.0",
+    "@ngrx/component-store": "15.4.0",
+    "@ngrx/effects": "15.4.0",
+    "@ngrx/entity": "15.4.0",
+    "@ngrx/router-store": "15.4.0",
+    "@ngrx/store": "15.4.0",
+    "@ngx-formly/core": "^6.1.5",
+    "@ngx-formly/material": "^6.1.5",
+    "@nx/angular": "16.1.2",
     "angular-svg-icon": "^15.0.0",
-    "rxjs": "~7.5.0",
+    "nx-cloud": "16.0.5",
+    "rxjs": "7.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "0.12.0"
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.1",
-    "@angular-devkit/core": "15.2.1",
-    "@angular-devkit/schematics": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "^15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "~15.2.0",
-    "@angular/compiler-cli": "15.2.1",
-    "@angular/language-service": "15.2.1",
-    "@commitlint/cli": "^17.4.0",
-    "@commitlint/config-conventional": "^17.4.0",
-    "@ngrx/schematics": "15.3.0",
-    "@ngrx/store-devtools": "15.3.0",
-    "@ngx-formly/schematics": "^6.1.3",
-    "@nrwl/cli": "15.8.5",
-    "@nrwl/cypress": "15.8.5",
-    "@nrwl/eslint-plugin-nx": "15.8.5",
-    "@nrwl/jest": "15.8.5",
-    "@nrwl/js": "15.8.5",
-    "@nrwl/linter": "15.8.5",
-    "@nrwl/workspace": "15.8.5",
-    "@schematics/angular": "15.2.1",
+    "@angular-devkit/build-angular": "16.0.0",
+    "@angular-devkit/core": "16.0.0",
+    "@angular-devkit/schematics": "16.0.0",
+    "@angular-eslint/eslint-plugin": "16.0.1",
+    "@angular-eslint/eslint-plugin-template": "16.0.1",
+    "@angular-eslint/schematics": "^16.0.1",
+    "@angular-eslint/template-parser": "16.0.1",
+    "@angular/cli": "~16.0.0",
+    "@angular/compiler-cli": "16.0.0",
+    "@angular/language-service": "16.0.0",
+    "@commitlint/cli": "17.6.3",
+    "@commitlint/config-conventional": "17.6.3",
+    "@ngrx/schematics": "15.4.0",
+    "@ngrx/store-devtools": "15.4.0",
+    "@ngx-formly/schematics": "^6.1.5",
+    "@nx/cypress": "16.1.2",
+    "@nx/eslint-plugin": "16.1.2",
+    "@nx/jest": "16.1.2",
+    "@nx/js": "16.1.2",
+    "@nx/linter": "16.1.2",
+    "@nx/workspace": "16.1.2",
+    "@schematics/angular": "16.0.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/jest": "29.4.0",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "autoprefixer": "^10.4.13",
     "branch-name-lint": "^2.1.1",
-    "commitizen": "^4.2.6",
-    "cypress": "^12.2.0",
+    "commitizen": "^4.3.0",
+    "cypress": "12.11.0",
     "cz-customizable": "^7.0.0",
     "cz-customizable-ghooks": "^2.0.0",
     "eslint": "~8.15.0",
@@ -117,21 +116,21 @@
     "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-ngrx": "^2.1.4",
     "husky": "^8.0.2",
-    "jasmine-marbles": "~0.9.1",
+    "jasmine-marbles": "~0.9.2",
     "jest": "29.4.3",
-    "jest-environment-jsdom": "29.4.3",
-    "jest-preset-angular": "13.0.0",
+    "jest-environment-jsdom": "29.5.0",
+    "jest-preset-angular": "13.1.0",
     "markdownlint": "^0.28.0",
     "markdownlint-cli": "^0.33.0",
-    "nx": "15.8.5",
+    "nx": "16.1.2",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.2",
-    "rimraf": "^4.3.1",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.0",
     "tailwindcss": "^3.2.4",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "5.0.4"
   },
   "config": {
     "commitizen": {
