--- a/package.json
+++ b/package.json
@@ -60,12 +60,12 @@
     "@angular/platform-browser": "16.0.0",
     "@angular/platform-browser-dynamic": "16.0.0",
     "@angular/router": "16.0.0",
-    "@ngrx/component": "15.4.0",
-    "@ngrx/component-store": "15.4.0",
-    "@ngrx/effects": "15.4.0",
-    "@ngrx/entity": "15.4.0",
-    "@ngrx/router-store": "15.4.0",
-    "@ngrx/store": "15.4.0",
+    "@ngrx/component": "16.0.0-rc.0",
+    "@ngrx/component-store": "16.0.0-rc.0",
+    "@ngrx/effects": "16.0.0-rc.0",
+    "@ngrx/entity": "16.0.0-rc.0",
+    "@ngrx/router-store": "16.0.0-rc.0",
+    "@ngrx/store": "16.0.0-rc.0",
     "@ngx-formly/core": "^6.1.5",
     "@ngx-formly/material": "^6.1.5",
     "@nx/angular": "16.1.2",
@@ -88,8 +88,8 @@
     "@angular/language-service": "16.0.0",
     "@commitlint/cli": "17.6.3",
     "@commitlint/config-conventional": "17.6.3",
-    "@ngrx/schematics": "15.4.0",
-    "@ngrx/store-devtools": "15.4.0",
+    "@ngrx/schematics": "16.0.0-rc.0",
+    "@ngrx/store-devtools": "16.0.0-rc.0",
     "@ngx-formly/schematics": "^6.1.5",
     "@nx/cypress": "16.1.2",
     "@nx/eslint-plugin": "16.1.2",
