--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Deploy to GitHub Pages
-        uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
+        uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0 --force
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
           build_configuration: staging
