--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "plastikspace",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": ">=16.x <=18.x"
+  },
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
