--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
     "start": "nx serve",
+    "stop": "kill -9 $(lsof -t -i:4200)",
     "build": "nx run-many --target=build --all --parallel",
     "test": "nx test",
     "test:watch": "nx test --watch",
@@ -47,7 +48,10 @@
     "nasa-images:build": "nx run nasa-images:build --parallel",
     "nasa-images:test": "nx run nasa-images:test",
     "nasa-images:e2e": "nx run nasa-images-e2e:e2e",
-    "nasa-images:a11y": "pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
+    "nasa-images:http-server": "angular-http-server --path ./dist/apps/nasa-images --port 8080",
+    "prenasa-images:a11y": "yarn nasa-images:build",
+    "nasa-images:a11y": "npm-run-all --parallel --race nasa-images:http-server nasa-images:a11y:run",
+    "nasa-images:a11y:run": "pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
     "nasa-images:build:github": "nx run nasa-images:build:prod",
     "branch:lint": "branch-name-lint branchNameLint.json"
   },
@@ -103,9 +107,11 @@
     "@schematics/angular": "16.0.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/jest": "29.4.0",
+    "@types/jest-axe": "^3.5.5",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
+    "angular-http-server": "^1.11.1",
     "autoprefixer": "^10.4.13",
     "branch-name-lint": "^2.1.1",
     "commitizen": "^4.3.0",
@@ -121,10 +127,12 @@
     "husky": "^8.0.2",
     "jasmine-marbles": "~0.9.2",
     "jest": "29.4.3",
+    "jest-axe": "^7.0.1",
     "jest-environment-jsdom": "29.5.0",
     "jest-preset-angular": "13.1.0",
     "markdownlint": "^0.28.0",
     "markdownlint-cli": "^0.33.0",
+    "npm-run-all": "^4.1.5",
     "nx": "16.1.2",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.4.21",
