--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "clean:dist": "rimraf dist",
     "install:local": "yarn husky-install && yarn clean:all && yarn install --frozen-lockfile",
     "markdownlint": "markdownlint *.md",
-    "nasa-images:serve": "nx run nasa-images:serve",
+    "nasa-images:serve": "nx run nasa-images:serve:development",
     "nasa-images:lint": "nx run nasa-images:lint",
     "nasa-images:build": "nx run nasa-images:build --parallel",
     "nasa-images:test": "nx run nasa-images:test",
     "nasa-images:e2e": "nx run nasa-images-e2e:e2e",
-    "nasa-images:a11y": "pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
+    "nasa-images:check-a11y": "wait-on http://localhost:4200/ && pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
+    "nasa-images:a11y": "npm-run-all -p -r nasa-images:serve nasa-images:check-a11y",
     "nasa-images:build:github": "nx run nasa-images:build:prod",
     "branch:lint": "branch-name-lint branchNameLint.json"
   },
@@ -125,6 +126,7 @@
     "jest-preset-angular": "13.1.0",
     "markdownlint": "^0.28.0",
     "markdownlint-cli": "^0.33.0",
+    "npm-run-all": "^4.1.5",
     "nx": "16.1.2",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.4.21",
@@ -133,7 +135,8 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "wait-on": "^7.0.1"
   },
   "config": {
     "commitizen": {
