--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
     "start": "nx serve",
+    "stop": "kill -9 $(lsof -t -i:4200)",
     "build": "nx run-many --target=build --all --parallel",
     "test": "nx test",
     "test:watch": "nx test --watch",
@@ -42,13 +43,13 @@
     "clean:dist": "rimraf dist",
     "install:local": "yarn husky-install && yarn clean:all && yarn install --frozen-lockfile",
     "markdownlint": "markdownlint *.md",
-    "nasa-images:serve": "nx run nasa-images:serve:development",
+    "nasa-images:serve": "nx run nasa-images:serve",
     "nasa-images:lint": "nx run nasa-images:lint",
     "nasa-images:build": "nx run nasa-images:build --parallel",
     "nasa-images:test": "nx run nasa-images:test",
     "nasa-images:e2e": "nx run nasa-images-e2e:e2e",
-    "nasa-images:check-a11y": "wait-on http://localhost:4200/ && pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
-    "nasa-images:a11y": "npm-run-all -p -r nasa-images:serve nasa-images:check-a11y",
+    "nasa-images:check-a11y": "wait-on http://localhost:3000/ && pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
+    "nasa-images:a11y": "concurrently 'yarn nasa-images:serve --port=3000' 'yarn nasa-images:check-a11y' --kill-others --success last",
     "nasa-images:build:github": "nx run nasa-images:build:prod",
     "branch:lint": "branch-name-lint branchNameLint.json"
   },
@@ -110,6 +111,7 @@
     "autoprefixer": "^10.4.13",
     "branch-name-lint": "^2.1.1",
     "commitizen": "^4.3.0",
+    "concurrently": "^8.0.1",
     "cypress": "12.11.0",
     "cz-customizable": "^7.0.0",
     "cz-customizable-ghooks": "^2.0.0",
@@ -126,7 +128,6 @@
     "jest-preset-angular": "13.1.0",
     "markdownlint": "^0.28.0",
     "markdownlint-cli": "^0.33.0",
-    "npm-run-all": "^4.1.5",
     "nx": "16.1.2",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.4.21",
