--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "nasa-images:build": "nx run nasa-images:build --parallel",
     "nasa-images:test": "nx run nasa-images:test",
     "nasa-images:e2e": "nx run nasa-images-e2e:e2e",
-    "nasa-images:check-a11y": "wait-on http://localhost:3000/ && pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
-    "nasa-images:a11y": "concurrently 'yarn nasa-images:serve --port=3000' 'yarn nasa-images:check-a11y' --kill-others --success last",
+    "nasa-images:http-server": "angular-http-server --path dist/apps/nasa-images --port 8080 --silent",
+    "prenasa-images:a11y": "nx run nasa-images:build",
+    "nasa-images:a11y": "npm-run-all --parallel --race nasa-images:http-server nasa-images:a11y:run",
+    "nasa-images:a11y:run": "pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
     "nasa-images:build:github": "nx run nasa-images:build:prod",
     "branch:lint": "branch-name-lint branchNameLint.json"
   },
@@ -108,10 +110,10 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
+    "angular-http-server": "^1.11.1",
     "autoprefixer": "^10.4.13",
     "branch-name-lint": "^2.1.1",
     "commitizen": "^4.3.0",
-    "concurrently": "^8.0.1",
     "cypress": "12.11.0",
     "cz-customizable": "^7.0.0",
     "cz-customizable-ghooks": "^2.0.0",
@@ -128,6 +130,7 @@
     "jest-preset-angular": "13.1.0",
     "markdownlint": "^0.28.0",
     "markdownlint-cli": "^0.33.0",
+    "npm-run-all": "^4.1.5",
     "nx": "16.1.2",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.4.21",
@@ -136,8 +139,7 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.4",
-    "wait-on": "^7.0.1"
+    "typescript": "5.0.4"
   },
   "config": {
     "commitizen": {
