--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "nasa-images:build": "nx run nasa-images:build --parallel",
     "nasa-images:test": "nx run nasa-images:test",
     "nasa-images:e2e": "nx run nasa-images-e2e:e2e",
-    "nasa-images:http-server": "angular-http-server --path dist/apps/nasa-images --port 8080 --silent",
-    "prenasa-images:a11y": "nx run nasa-images:build",
+    "nasa-images:http-server": "angular-http-server --path ./dist/apps/nasa-images --port 8080",
+    "prenasa-images:a11y": "yarn nasa-images:build",
     "nasa-images:a11y": "npm-run-all --parallel --race nasa-images:http-server nasa-images:a11y:run",
     "nasa-images:a11y:run": "pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
     "nasa-images:build:github": "nx run nasa-images:build:prod",
