--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -1,16 +1,11 @@
 name: pa11y nasa-images
 
 on:
-  workflow_run:
-    workflows: [CI]
-    types: [completed]
-    branches:
-      - 'develop'
+  pull_request:
 
 jobs:
   pa11y:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success'
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
