--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -1,6 +1,9 @@
 name: pa11y nasa-images
 
 on:
+  push:
+    branches:
+      - develop
   pull_request:
 
 jobs:
@@ -11,8 +14,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Install
         run: yarn
-      - name: Build nasa images
-        run: yarn nasa-images:build
       - name: Run pa11y-ci
         run: yarn nasa-images:a11y
       - name: Read pa11y_output file.
@@ -21,11 +22,12 @@ jobs:
         with:
           path: ./apps/nasa-images/.pa11y-report.json
       - name: Comment on pull request.
+        if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: '<details><summary>Pa11y testing results</summary>
-            ```${{ steps.pa11y_output.outputs.content }}```
+            ${{ steps.pa11y_output.outputs.content }}
             </details>'
       - name: Check for pa11y failures.
         if: contains(steps.pa11y_output.outputs.content, 'errno 2')
