--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -2,16 +2,17 @@ name: Deploy Staging
 
 on:
   workflow_run:
-    workflows: [CI, pa11y nasa-images]
-    types: [completed]
+    workflows: [a11y nasa-images]
+    types:
+      - completed
     branches:
-      - 'develop'
+      - develop
 
 env:
   NPM_CONFIG_LEGACY_PEER_DEPS: true
 
 jobs:
-  deploy:
+  on-success:
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion == 'success'
     steps:
@@ -25,3 +26,8 @@ jobs:
           base_href: ''
           deploy_branch: nasa-images-staging-page
           angular_dist_build_folder: dist/apps/nasa-images
+  on-failure:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    steps:
+      - run: echo 'The triggering workflow failed'
