feat: #185 add testtt

--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Check for pa11y failures.
         if: contains(steps.pa11y_output.outputs.content, 'errno 2')
         run: |
-          echo "::error::The site is failing accessibility tests. Please review the comment in the pull request or the pa11y-ci step in the workflow for details."
+          echo "::error::The site is failing accessibility tests. Please review the report for details."
           exit 1
