--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -2,11 +2,10 @@ name: Deploy Staging
 
 on:
   workflow_run:
-    workflows: [a11y nasa-images]
-    types:
-      - completed
+    workflows: [CI, a11y nasa-images]
+    types: [completed]
     branches:
-      - develop
+      - 'develop'
 
 env:
   NPM_CONFIG_LEGACY_PEER_DEPS: true
@@ -14,7 +13,10 @@ env:
 jobs:
   on-success:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success'
+    if: (github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow == 'CI') &&
+      (github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow == 'a11y nasa-images')
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
