--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -13,11 +13,7 @@ env:
 jobs:
   on-success:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow == 'CI' &&
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow == 'pa11y nasa-images' &&
-      github.event.workflow_run.conclusion == 'success'
+    if: github.event.workflow_run.conclusion == 'success'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
