feat(shared/form/ui): #178 add a year picker formly controller
use it in nasa-images search

ISSUES CLOSED: #178

--- a/apps/nasa-images/project.json
+++ b/apps/nasa-images/project.json
@@ -25,6 +25,7 @@
           }
         ],
         "styles": ["apps/nasa-images/src/styles/styles.scss"],
+        "allowedCommonJsDependencies": ["moment"],
         "scripts": []
       },
       "configurations": {
