--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@angular/core": "16.0.0",
     "@angular/forms": "16.0.0",
     "@angular/material": "16.0.0",
+    "@angular/material-moment-adapter": "^16.0.4",
     "@angular/platform-browser": "16.0.0",
     "@angular/platform-browser-dynamic": "16.0.0",
     "@angular/router": "16.0.0",
@@ -77,6 +78,7 @@
     "@ngx-formly/material": "^6.1.5",
     "@nx/angular": "16.1.2",
     "angular-svg-icon": "^15.0.0",
+    "moment": "^2.29.4",
     "nx-cloud": "16.0.5",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
@@ -108,6 +110,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/jest": "29.4.0",
     "@types/jest-axe": "^3.5.5",
+    "@types/moment": "^2.13.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
