perf: #123 review and clean up css styling
add documentation and refactor tailwind and CSS vars

ISSUES CLOSED: #123

--- a/apps/nasa-images/project.json
+++ b/apps/nasa-images/project.json
@@ -25,6 +25,9 @@
           }
         ],
         "styles": ["apps/nasa-images/src/styles/styles.scss"],
+        "stylePreprocessorOptions": {
+          "includePaths": ["libs/core/styles/util/material/src"]
+        },
         "allowedCommonJsDependencies": ["moment"],
         "scripts": []
       },
