perf(core/api): #109 set a caching option to api service
ISSUES CLOSED: #109

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "husky-install": "husky install",
+    "husky-install": "npx husky install",
     "clean": "rimraf node_modules",
     "clean:all": "rimraf node_modules dist dll && yarn cache clean --force",
     "clean:dist": "rimraf dist",
