test(e2e): #248 add nasa-images app layout e2e
add CI for e2e with github actions

ISSUES CLOSED: #248

--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -1,4 +1,4 @@
-name: a11y nasa-images
+name: pa11y nasa-images
 
 on:
   push:
@@ -9,18 +9,23 @@ on:
 jobs:
   pa11y:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout source
+      - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install
         run: yarn
+
       - name: Run pa11y-ci
         run: yarn nasa-images:a11y
+
       - name: Read pa11y_output file.
         id: pa11y_output
         uses: juliangruber/read-file-action@v1
         with:
           path: ./apps/nasa-images/.pa11y-report.json
+
       - name: Comment on pull request.
         if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v1
@@ -29,6 +34,7 @@ jobs:
           message: '<details><summary>Pa11y testing results</summary>
             ${{ steps.pa11y_output.outputs.content }}
             </details>'
+
       - name: Check for pa11y failures.
         if: contains(steps.pa11y_output.outputs.content, 'errno 2')
         run: |
