--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "nasa-images:build": "nx run nasa-images:build --parallel",
     "nasa-images:test": "nx run nasa-images:test",
     "nasa-images:e2e": "nx run nasa-images-e2e:e2e",
+    "nasa-images:e2e:local": "yarn nx run nasa-images-e2e:e2e --browser=chrome --port='cypress-auto' --watch=true",
+    "nasa-images:e2e:ci": "yarn nx run nasa-images-e2e:e2e --record=true",
     "nasa-images:http-server": "angular-http-server --path ./dist/apps/nasa-images --port 8080",
     "prenasa-images:a11y": "yarn nasa-images:build",
     "nasa-images:a11y": "npm-run-all --parallel --race nasa-images:http-server nasa-images:a11y:run",
@@ -121,7 +123,7 @@
     "@types/jest": "29.4.0",
     "@types/jest-axe": "^3.5.5",
     "@types/moment": "^2.13.0",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "angular-http-server": "^1.11.1",
