--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -2,7 +2,7 @@ name: Deploy Staging
 
 on:
   workflow_run:
-    workflows: [CI, pa11y nasa-images]
+    workflows: [CI, E2E nasa-images, pa11y nasa-images]
     types: [completed]
     branches:
       - 'develop'
@@ -13,10 +13,12 @@ env:
 jobs:
   on-success:
     runs-on: ubuntu-latest
+
     if: github.event.workflow_run.conclusion == 'success'
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
+
       - name: Deploy to GitHub Pages
         uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
         with:
@@ -25,6 +27,7 @@ jobs:
           base_href: ''
           deploy_branch: nasa-images-staging-page
           angular_dist_build_folder: dist/apps/nasa-images
+
   on-failure:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
