chore: #255 upgrade nx, angular and other libs
ISSUES CLOSED: #255

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -100,7 +100,7 @@
         "jsdoc/match-description": [
           "error",
           {
-            "matchDescription": "/^[A-Z].+[.]/g"
+            "matchDescription": "/^[A-Z].+[.]/"
           }
         ]
       }
