--- a/package.json
+++ b/package.json
@@ -71,95 +71,95 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.1.4",
-    "@angular/cdk": "16.1.4",
-    "@angular/common": "16.1.4",
-    "@angular/compiler": "16.1.4",
-    "@angular/core": "16.1.4",
-    "@angular/forms": "16.1.4",
-    "@angular/material": "16.1.4",
-    "@angular/material-moment-adapter": "16.1.4",
-    "@angular/platform-browser": "16.1.4",
-    "@angular/platform-browser-dynamic": "16.1.4",
-    "@angular/router": "16.1.4",
-    "@ngrx/component": "16.0.1",
-    "@ngrx/component-store": "16.0.1",
-    "@ngrx/effects": "16.0.1",
-    "@ngrx/entity": "16.0.1",
-    "@ngrx/router-store": "16.0.1",
-    "@ngrx/store": "16.0.1",
-    "@ngx-formly/core": "^6.1.5",
-    "@ngx-formly/material": "^6.1.5",
-    "@nx/angular": "16.5.1",
-    "angular-svg-icon": "^15.0.0",
+    "@angular/animations": "16.2.4",
+    "@angular/cdk": "16.2.3",
+    "@angular/common": "16.2.4",
+    "@angular/compiler": "16.2.4",
+    "@angular/core": "16.2.4",
+    "@angular/forms": "16.2.4",
+    "@angular/material": "16.2.3",
+    "@angular/material-moment-adapter": "16.2.3",
+    "@angular/platform-browser": "16.2.4",
+    "@angular/platform-browser-dynamic": "16.2.4",
+    "@angular/router": "16.2.4",
+    "@ngrx/component": "16.2.0",
+    "@ngrx/component-store": "16.2.0",
+    "@ngrx/effects": "16.2.0",
+    "@ngrx/entity": "16.2.0",
+    "@ngrx/router-store": "16.2.0",
+    "@ngrx/store": "16.2.0",
+    "@ngx-formly/core": "^6.1.8",
+    "@ngx-formly/material": "^6.1.8",
+    "@nx/angular": "16.8.1",
+    "angular-svg-icon": "^16.0.0",
     "moment": "^2.29.4",
-    "nx-cloud": "16.1.0",
+    "nx-cloud": "16.4.0",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.1.4",
-    "@angular-devkit/core": "16.1.4",
-    "@angular-devkit/schematics": "16.1.4",
-    "@angular-eslint/eslint-plugin": "16.0.1",
-    "@angular-eslint/eslint-plugin-template": "16.0.1",
-    "@angular-eslint/schematics": "^16.0.1",
-    "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "16.1.4",
-    "@angular/language-service": "16.1.4",
-    "@commitlint/cli": "17.6.3",
-    "@commitlint/config-conventional": "17.6.3",
+    "@angular-devkit/build-angular": "16.2.1",
+    "@angular-devkit/core": "16.2.1",
+    "@angular-devkit/schematics": "16.2.1",
+    "@angular-eslint/eslint-plugin": "16.1.2",
+    "@angular-eslint/eslint-plugin-template": "16.1.2",
+    "@angular-eslint/schematics": "^16.1.2",
+    "@angular-eslint/template-parser": "16.1.2",
+    "@angular/cli": "~16.2.0",
+    "@angular/compiler-cli": "16.2.4",
+    "@angular/language-service": "16.2.4",
+    "@commitlint/cli": "17.7.1",
+    "@commitlint/config-conventional": "17.7.0",
     "@jscutlery/cypress-harness": "^0.4.4",
-    "@ngrx/schematics": "16.0.1",
-    "@ngrx/store-devtools": "16.0.1",
-    "@ngx-formly/schematics": "^6.1.5",
-    "@nx/cypress": "16.5.1",
-    "@nx/eslint-plugin": "16.5.1",
-    "@nx/jest": "16.5.1",
-    "@nx/js": "16.5.1",
-    "@nx/linter": "16.5.1",
-    "@nx/web": "16.5.1",
-    "@nx/workspace": "16.5.1",
-    "@schematics/angular": "16.1.4",
+    "@ngrx/schematics": "16.2.0",
+    "@ngrx/store-devtools": "16.2.0",
+    "@ngx-formly/schematics": "^6.1.8",
+    "@nx/cypress": "16.8.1",
+    "@nx/eslint-plugin": "16.8.1",
+    "@nx/jest": "16.8.1",
+    "@nx/js": "16.8.1",
+    "@nx/linter": "16.8.1",
+    "@nx/web": "16.8.1",
+    "@nx/workspace": "16.8.1",
+    "@schematics/angular": "16.2.1",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/jest": "29.4.0",
+    "@types/jest": "29.5.4",
     "@types/jest-axe": "^3.5.5",
     "@types/moment": "^2.13.0",
     "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "angular-http-server": "^1.11.1",
+    "@typescript-eslint/eslint-plugin": "6.7.0",
+    "@typescript-eslint/parser": "6.7.0",
+    "angular-http-server": "^1.12.0",
     "autoprefixer": "^10.4.13",
     "branch-name-lint": "^2.1.1",
     "commitizen": "^4.3.0",
-    "cypress": "12.17.1",
+    "cypress": "^13.0.0",
     "cypress-pipe": "^2.0.0",
     "cz-customizable": "^7.0.0",
     "cz-customizable-ghooks": "^2.0.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-deprecation": "^1.3.3",
-    "eslint-plugin-jsdoc": "^39.6.4",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-cypress": "2.14.0",
+    "eslint-plugin-deprecation": "^1.5.0",
+    "eslint-plugin-jsdoc": "^46.6.0",
     "eslint-plugin-ngrx": "^2.1.4",
-    "husky": "^8.0.2",
+    "husky": "^8.0.3",
     "jasmine-marbles": "~0.9.2",
-    "jest": "29.4.3",
-    "jest-axe": "^7.0.1",
-    "jest-environment-jsdom": "29.5.0",
+    "jest": "29.7.0",
+    "jest-axe": "^8.0.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "13.1.1",
-    "markdownlint": "^0.28.0",
-    "markdownlint-cli": "^0.33.0",
+    "markdownlint": "^0.31.0",
+    "markdownlint-cli": "^0.36.0",
     "npm-run-all": "^4.1.5",
-    "nx": "16.5.1",
+    "nx": "16.8.1",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.0",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.1",
     "tailwindcss": "^3.2.4",
-    "ts-jest": "29.1.0",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.1.6"
   },
