--- a/libs/shared/util/formatters/project.json
+++ b/libs/shared/util/formatters/project.json
@@ -9,16 +9,12 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/util/formatters/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/shared/util/formatters/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/shared/util/formatters/**/*.ts", "libs/shared/util/formatters/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": ["scope:shared", "type:util"]
