--- a/apps/experimental/project.json
+++ b/apps/experimental/project.json
@@ -53,10 +53,10 @@
       },
       "configurations": {
         "production": {
-          "browserTarget": "experimental:build:production"
+          "buildTarget": "experimental:build:production"
         },
         "development": {
-          "browserTarget": "experimental:build:development"
+          "buildTarget": "experimental:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -64,28 +64,18 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "experimental:build"
+        "buildTarget": "experimental:build"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/experimental/**/*.ts", "apps/experimental/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/experimental/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "apps/experimental/jest.config.ts"
       }
     },
     "serve-static": {
