--- a/apps/nasa-images/project.json
+++ b/apps/nasa-images/project.json
@@ -68,10 +68,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "nasa-images:build:production"
+          "buildTarget": "nasa-images:build:production"
         },
         "development": {
-          "browserTarget": "nasa-images:build:development"
+          "buildTarget": "nasa-images:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -79,21 +79,17 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "nasa-images:build"
+        "buildTarget": "nasa-images:build"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "options": {
-        "lintFilePatterns": ["apps/nasa-images/**/*.ts", "apps/nasa-images/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/nasa-images"],
       "options": {
-        "jestConfig": "apps/nasa-images/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "apps/nasa-images/jest.config.ts"
       }
     }
   },
