--- a/libs/core/cms-layout/ui/sidenav/project.json
+++ b/libs/core/cms-layout/ui/sidenav/project.json
@@ -9,16 +9,12 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/core/cms-layout/ui/sidenav/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/core/cms-layout/ui/sidenav/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/core/cms-layout/ui/sidenav/**/*.ts", "libs/core/cms-layout/ui/sidenav/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": ["scope:core", "type:ui"]
