--- a/libs/core/ng-entry-html/util/project.json
+++ b/libs/core/ng-entry-html/util/project.json
@@ -6,11 +6,8 @@
   "prefix": "plastik",
   "targets": {
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/core/ng-entry-html/util/**/*.ts", "libs/core/ng-entry-html/util/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": ["scope:core", "type:util"]
