--- a/libs/nasa-images/search/entities/project.json
+++ b/libs/nasa-images/search/entities/project.json
@@ -9,16 +9,12 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/nasa-images/search/entities/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/nasa-images/search/entities/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/nasa-images/search/entities/**/*.ts", "libs/nasa-images/search/entities/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": ["scope:nasa-images", "type:entity"]
