--- a/libs/shared/util/objects/project.json
+++ b/libs/shared/util/objects/project.json
@@ -9,15 +9,11 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/util/objects/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/shared/util/objects/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "options": {
-        "lintFilePatterns": ["libs/shared/util/objects/**/*.ts", "libs/shared/util/objects/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint"
     }
   },
   "tags": ["scope:shared", "type:util"]
