--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-    "node": ">=16.x <=18.x"
+    "node": ">=18.13.0"
   },
   "resolutions": {
     "webpack": "5.72.1"
+  },
+  "overrides": {
+    "@babel/traverse": "7.22.6"
   },
   "scripts": {
     "ng": "nx",
@@ -55,8 +58,8 @@
     "nasa-images:e2e:ci": "yarn nx run nasa-images-e2e:e2e --port='cypress-auto' --record=true",
     "nasa-images:http-server": "angular-http-server --path ./dist/apps/nasa-images --port 8080",
     "prenasa-images:a11y": "yarn nasa-images:build",
-    "nasa-images:a11y": "npm-run-all --parallel --race nasa-images:http-server nasa-images:a11y:run",
     "nasa-images:a11y:run": "pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
+    "nasa-images:a11y": "npm-run-all --parallel --race nasa-images:http-server nasa-images:a11y:run",
     "nasa-images:build:github": "nx run nasa-images:build:prod",
     "experimental:serve": "nx run experimental:serve",
     "experimental:lint": "nx run experimental:lint",
@@ -71,65 +74,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.4",
-    "@angular/cdk": "16.2.3",
-    "@angular/common": "16.2.4",
-    "@angular/compiler": "16.2.4",
-    "@angular/core": "16.2.4",
-    "@angular/forms": "16.2.4",
-    "@angular/material": "16.2.3",
-    "@angular/material-moment-adapter": "16.2.3",
-    "@angular/platform-browser": "16.2.4",
-    "@angular/platform-browser-dynamic": "16.2.4",
-    "@angular/router": "16.2.4",
-    "@ngrx/component": "16.2.0",
-    "@ngrx/component-store": "16.2.0",
-    "@ngrx/effects": "16.2.0",
-    "@ngrx/entity": "16.2.0",
-    "@ngrx/router-store": "16.2.0",
-    "@ngrx/store": "16.2.0",
-    "@ngx-formly/core": "^6.1.8",
-    "@ngx-formly/material": "^6.1.8",
-    "@nx/angular": "16.8.1",
-    "angular-svg-icon": "^16.0.0",
+    "@angular/animations": "17.0.8",
+    "@angular/cdk": "17.0.4",
+    "@angular/common": "17.0.8",
+    "@angular/compiler": "17.0.8",
+    "@angular/core": "17.0.8",
+    "@angular/forms": "17.0.8",
+    "@angular/material": "17.0.4",
+    "@angular/material-moment-adapter": "17.0.4",
+    "@angular/platform-browser": "17.0.8",
+    "@angular/platform-browser-dynamic": "17.0.8",
+    "@angular/router": "17.0.8",
+    "@ngrx/component": "17.0.1",
+    "@ngrx/component-store": "17.0.1",
+    "@ngrx/effects": "17.0.1",
+    "@ngrx/entity": "17.0.1",
+    "@ngrx/router-store": "17.0.1",
+    "@ngrx/store": "17.0.1",
+    "@ngx-formly/core": "^6.2.2",
+    "@ngx-formly/material": "^6.2.2",
+    "@nx/angular": "17.2.8",
+    "angular-svg-icon": "^17.0.0",
     "moment": "^2.29.4",
-    "nx-cloud": "16.4.0",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "0.13.0"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.1",
-    "@angular-devkit/core": "16.2.1",
-    "@angular-devkit/schematics": "16.2.1",
-    "@angular-eslint/eslint-plugin": "16.1.2",
-    "@angular-eslint/eslint-plugin-template": "16.1.2",
-    "@angular-eslint/schematics": "^16.1.2",
-    "@angular-eslint/template-parser": "16.1.2",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "16.2.4",
-    "@angular/language-service": "16.2.4",
-    "@commitlint/cli": "17.7.1",
-    "@commitlint/config-conventional": "17.7.0",
-    "@jscutlery/cypress-harness": "^0.4.4",
-    "@ngrx/schematics": "16.2.0",
-    "@ngrx/store-devtools": "16.2.0",
-    "@ngx-formly/schematics": "^6.1.8",
-    "@nx/cypress": "16.8.1",
-    "@nx/eslint-plugin": "16.8.1",
-    "@nx/jest": "16.8.1",
-    "@nx/js": "16.8.1",
-    "@nx/linter": "16.8.1",
-    "@nx/web": "16.8.1",
-    "@nx/workspace": "16.8.1",
-    "@schematics/angular": "16.2.1",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/jest": "29.5.4",
-    "@types/jest-axe": "^3.5.5",
+    "@angular-devkit/build-angular": "17.0.8",
+    "@angular-devkit/core": "17.0.8",
+    "@angular-devkit/schematics": "17.0.8",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/schematics": "^17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.8",
+    "@angular/language-service": "17.0.8",
+    "@commitlint/cli": "18.4.3",
+    "@commitlint/config-conventional": "18.4.3",
+    "@jscutlery/cypress-harness": "^0.5.1",
+    "@ngrx/schematics": "17.0.1",
+    "@ngrx/store-devtools": "17.0.1",
+    "@ngx-formly/schematics": "^6.2.2",
+    "@nx/cypress": "17.2.8",
+    "@nx/eslint-plugin": "17.2.8",
+    "@nx/jest": "17.2.8",
+    "@nx/js": "17.2.8",
+    "@nx/web": "17.2.8",
+    "@nx/workspace": "17.2.8",
+    "@schematics/angular": "17.0.8",
+    "@types/jest": "29.5.11",
+    "@types/jest-axe": "^3.5.9",
     "@types/moment": "^2.13.0",
-    "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "6.7.0",
-    "@typescript-eslint/parser": "6.7.0",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
     "angular-http-server": "^1.12.0",
     "autoprefixer": "^10.4.13",
     "branch-name-lint": "^2.1.1",
@@ -149,11 +149,11 @@
     "jest": "29.7.0",
     "jest-axe": "^8.0.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "13.1.1",
+    "jest-preset-angular": "13.1.4",
     "markdownlint": "^0.31.0",
     "markdownlint-cli": "^0.36.0",
     "npm-run-all": "^4.1.5",
-    "nx": "16.8.1",
+    "nx": "17.2.8",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.4.21",
     "prettier": "^3.0.3",
@@ -161,7 +161,8 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2",
+    "@nx/eslint": "17.2.8"
   },
   "config": {
     "commitizen": {
