--- a/package.json
+++ b/package.json
@@ -61,6 +61,18 @@
     "nasa-images:a11y:run": "pa11y-ci --config ./apps/nasa-images/.pa11yci.json",
     "nasa-images:a11y": "npm-run-all --parallel --race nasa-images:http-server nasa-images:a11y:run",
     "nasa-images:build:github": "nx run nasa-images:build:prod",
+    "llecoop:serve": "nx run llecoop:serve",
+    "llecoop:lint": "nx run llecoop:lint",
+    "llecoop:build": "nx run llecoop:build --parallel",
+    "llecoop:test": "nx run llecoop:test",
+    "llecoop:e2e": "nx run llecoop-e2e:e2e",
+    "llecoop:e2e:local": "yarn nx run llecoop-e2e:e2e --browser=chrome --port='cypress-auto' --watch=true",
+    "llecoop:e2e:ci": "yarn nx run llecoop-e2e:e2e --port='cypress-auto' --record=true",
+    "llecoop:http-server": "angular-http-server --path ./dist/apps/llecoop --port 8080",
+    "prellecoop:a11y": "yarn llecoop:build",
+    "llecoop:a11y:run": "pa11y-ci --config ./apps/llecoop/.pa11yci.json",
+    "llecoop:a11y": "npm-run-all --parallel --race llecoop:http-server llecoop:a11y:run",
+    "llecoop:build:github": "nx run llecoop:build:prod",
     "experimental:serve": "nx run experimental:serve",
     "experimental:lint": "nx run experimental:lint",
     "experimental:build": "nx run experimental:build --parallel",
@@ -118,12 +130,15 @@
     "@ngrx/store-devtools": "17.0.1",
     "@ngx-formly/schematics": "^6.2.2",
     "@nx/cypress": "17.2.8",
+    "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/jest": "17.2.8",
     "@nx/js": "17.2.8",
     "@nx/web": "17.2.8",
     "@nx/workspace": "17.2.8",
     "@schematics/angular": "17.0.8",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@types/jest": "29.5.11",
     "@types/jest-axe": "^3.5.9",
     "@types/moment": "^2.13.0",
@@ -150,6 +165,7 @@
     "jest-axe": "^8.0.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "13.1.4",
+    "jsonc-eslint-parser": "^2.1.0",
     "markdownlint": "^0.31.0",
     "markdownlint-cli": "^0.36.0",
     "npm-run-all": "^4.1.5",
@@ -161,8 +177,7 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "@nx/eslint": "17.2.8"
+    "typescript": "5.2.2"
   },
   "config": {
     "commitizen": {
