--- a/package.json
+++ b/package.json
@@ -168,10 +168,14 @@
     "jsonc-eslint-parser": "^2.1.0",
     "markdownlint": "^0.31.0",
     "markdownlint-cli": "^0.36.0",
+    "ng-packagr": "~17.0.0",
     "npm-run-all": "^4.1.5",
     "nx": "17.2.8",
     "pa11y-ci": "^3.0.1",
     "postcss": "^8.4.21",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "tailwindcss": "^3.2.4",
