chore: reinstall current configuration
Closes #267

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,13 +19,40 @@
       "when": "$(basename)"
     }
   },
-  "projectManager.git.ignoredFolders": ["out", "typings", "test", ".haxelib"],
-  "projectManager.hg.ignoredFolders": ["out", "typings", "test", ".haxelib"],
-  "projectManager.svn.ignoredFolders": ["out", "typings", "test"],
-  "projectManager.any.ignoredFolders": ["out", "typings", "test"],
-  "projectManager.vscode.ignoredFolders": ["out", "typings", "test"],
+  "projectManager.git.ignoredFolders": [
+    "out",
+    "typings",
+    "test",
+    ".haxelib"
+  ],
+  "projectManager.hg.ignoredFolders": [
+    "out",
+    "typings",
+    "test",
+    ".haxelib"
+  ],
+  "projectManager.svn.ignoredFolders": [
+    "out",
+    "typings",
+    "test"
+  ],
+  "projectManager.any.ignoredFolders": [
+    "out",
+    "typings",
+    "test"
+  ],
+  "projectManager.vscode.ignoredFolders": [
+    "out",
+    "typings",
+    "test"
+  ],
   "svg.previewAll.exclude": "",
   "markdown.extension.completion.respectVscodeSearchExclude": false,
-  "cSpell.words": ["llecoop"],
-  "svg.preview.background": "transparent"
+  "cSpell.words": [
+    "jscutlery",
+    "llecoop",
+    "preexperimental",
+    "prellecoop",
+    "prenasa"
+  ]
 }
