--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-    "node": ">=18.13.0"
+    "node": "^20.11.1"
   },
   "resolutions": {
-    "webpack": "5.72.1"
+    "webpack": "5.89.0",
+    "webpack@^4.44.2": "4.44.2"
   },
   "overrides": {
     "@babel/traverse": "7.22.6"
@@ -107,6 +108,9 @@
     "@ngx-formly/material": "^6.2.2",
     "@nx/angular": "17.2.8",
     "angular-svg-icon": "^17.0.0",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.2",
     "moment": "^2.29.4",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
@@ -138,7 +142,8 @@
     "@nx/workspace": "17.2.8",
     "@schematics/angular": "17.0.8",
     "@swc-node/register": "~1.6.7",
-    "@swc/core": "~1.3.85",
+    "@swc/core": ">=1.4.13",
+    "@swc/types": ">=0.1",
     "@types/jest": "29.5.11",
     "@types/jest-axe": "^3.5.9",
     "@types/moment": "^2.13.0",
