chore: fix testing, linting and e2e after upgrading to NX 19
Closes #267

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,7 +65,9 @@
       "extends": ["plugin:@nx/typescript"],
       "rules": {
         "no-console": "error",
-        "@typescript-eslint/prefer-readonly": "error"
+        "@typescript-eslint/prefer-readonly": "error",
+        "@typescript-eslint/no-extra-semi": "error",
+        "no-extra-semi": "off"
       }
     },
     {
@@ -78,7 +80,10 @@
     {
       "files": ["*.js", "*.jsx"],
       "extends": ["plugin:@nx/javascript"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-extra-semi": "error",
+        "no-extra-semi": "off"
+      }
     },
     {
       "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
