--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -6,6 +6,11 @@ on:
       - develop
   pull_request:
 
+permissions:
+  actions: read
+  contents: read
+  pull-requests: write
+
 jobs:
   pa11y:
     runs-on: ubuntu-latest
@@ -15,7 +20,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install
-        run: yarn
+        run: yarn install --frozen-lockfile --network-timeout 1000000
+
+      - name: Build
+        run: yarn nasa-images:build
 
       - name: Run pa11y-ci
         run: yarn nasa-images:a11y
@@ -28,7 +36,7 @@ jobs:
 
       - name: Comment on pull request.
         if: github.event_name == 'pull_request'
-        uses: thollander/actions-comment-pull-request@v2.4.3
+        uses: thollander/actions-comment-pull-request@v2.5.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: '<details><summary>Pa11y testing results</summary>
