--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,40 +19,13 @@
       "when": "$(basename)"
     }
   },
-  "projectManager.git.ignoredFolders": [
-    "out",
-    "typings",
-    "test",
-    ".haxelib"
-  ],
-  "projectManager.hg.ignoredFolders": [
-    "out",
-    "typings",
-    "test",
-    ".haxelib"
-  ],
-  "projectManager.svn.ignoredFolders": [
-    "out",
-    "typings",
-    "test"
-  ],
-  "projectManager.any.ignoredFolders": [
-    "out",
-    "typings",
-    "test"
-  ],
-  "projectManager.vscode.ignoredFolders": [
-    "out",
-    "typings",
-    "test"
-  ],
+  "projectManager.git.ignoredFolders": ["out", "typings", "test", ".haxelib"],
+  "projectManager.hg.ignoredFolders": ["out", "typings", "test", ".haxelib"],
+  "projectManager.svn.ignoredFolders": ["out", "typings", "test"],
+  "projectManager.any.ignoredFolders": ["out", "typings", "test"],
+  "projectManager.vscode.ignoredFolders": ["out", "typings", "test"],
   "svg.previewAll.exclude": "",
   "markdown.extension.completion.respectVscodeSearchExclude": false,
-  "cSpell.words": [
-    "jscutlery",
-    "llecoop",
-    "preexperimental",
-    "prellecoop",
-    "prenasa"
-  ]
+  "cSpell.words": ["jscutlery", "llecoop", "preexperimental", "prellecoop", "prenasa"],
+  "angular.enable-strict-mode-prompt": false
 }
