--- a/libs/core/cms-layout/ui/footer/project.json
+++ b/libs/core/cms-layout/ui/footer/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/core/cms-layout/ui/footer/src",
   "prefix": "plastik",
+  "tags": ["scope:core", "type:ui"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -15,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["scope:core", "type:ui"]
+  }
 }
