--- a/libs/core/ng-entry-html/util/project.json
+++ b/libs/core/ng-entry-html/util/project.json
@@ -4,11 +4,10 @@
   "projectType": "library",
   "sourceRoot": "libs/core/ng-entry-html/util/src",
   "prefix": "plastik",
+  "tags": ["scope:core", "type:util"],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["scope:core", "type:util"]
+  }
 }
