--- a/libs/core/util/cypress-commands/project.json
+++ b/libs/core/util/cypress-commands/project.json
@@ -3,11 +3,10 @@
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/core/util/cypress-commands/src",
   "projectType": "library",
+  "tags": ["scope:core", ""],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["scope:core", ""]
+  }
 }
