--- a/libs/nasa-images/search/entities/project.json
+++ b/libs/nasa-images/search/entities/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/nasa-images/search/entities/src",
   "prefix": "plastik",
+  "tags": ["scope:nasa-images", "type:entity"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -13,9 +14,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["scope:nasa-images", "type:entity"]
+  }
 }
