--- a/libs/shared/activity/ui/project.json
+++ b/libs/shared/activity/ui/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/shared/activity/ui/src",
   "prefix": "plastik",
+  "tags": ["type:ui", "scope:shared"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -13,9 +14,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["type:ui", "scope:shared"]
+  }
 }
