--- a/libs/shared/util/entities/project.json
+++ b/libs/shared/util/entities/project.json
@@ -4,11 +4,10 @@
   "projectType": "library",
   "sourceRoot": "libs/shared/util/entities/src",
   "prefix": "plastik",
+  "tags": ["scope:shared", "type:entity"],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
+      "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["scope:shared", "type:entity"]
+  }
 }
