--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,10 @@ on:
       - develop
   pull_request:
 
-permissions:
-  actions: read
-  contents: read
-
 jobs:
   develop:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -30,12 +27,12 @@ jobs:
           cache: 'yarn'
 
       # Install dependencies
-      - run: yarn install --frozen-lockfile --network-timeout 1000000
+      - run: yarn install --immutable --network-timeout 1000000
       - uses: nrwl/nx-set-shas@v4
 
       # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
       # - run: npx nx-cloud record -- echo Hello World
       # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
-      - run: npx nx affected -t lint test build
-      # - run: npx nx affected --parallel 1 -t e2e-ci
       - run: npx nx-cloud record -- yarn markdownlint
+      - run: npx nx affected -t lint test
+      - run: npx nx affected --parallel 1 -t e2e-ci
