--- a/.github/workflows/e2e-nasa-images.yml
+++ b/.github/workflows/e2e-nasa-images.yml
@@ -5,10 +5,6 @@ on:
       - develop
   pull_request:
 
-permissions:
-  actions: read
-  contents: read
-
 jobs:
   e2e:
     runs-on: ubuntu-latest
@@ -17,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install
-        run: yarn
+        run: yarn install --immutable --network-timeout 1000000
 
       - name: Run Cypress tests with video recording
         env:
