--- a/apps/llecoop/.eslintrc.json
+++ b/apps/llecoop/.eslintrc.json
@@ -10,7 +10,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "llecoop",
+            "prefix": "plastik",
             "style": "camelCase"
           }
         ],
@@ -18,7 +18,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "llecoop",
+            "prefix": "plastik",
             "style": "kebab-case"
           }
         ]
@@ -28,6 +28,13 @@
       "files": ["*.html"],
       "extends": ["plugin:@nx/angular-template"],
       "rules": {}
+    },
+    {
+      "files": ["*.html"],
+      "extends": ["plugin:@angular-eslint/template/recommended", "plugin:@angular-eslint/template/accessibility"],
+      "rules": {
+        "@angular-eslint/template/no-call-expression": "off"
+      }
     }
   ]
 }
