--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -2,7 +2,7 @@
   "name": "llecoop",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "llecoop",
+  "prefix": "plastik",
   "sourceRoot": "apps/llecoop/src",
   "tags": ["scope:llecoop", "type:app"],
   "targets": {
