--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test": "nx test",
     "test:watch": "nx test --watch",
     "test:coverage": "nx test --coverage",
-    "test:all": "nx run-many --all --target=test --ci --passWithNoTests --parallel --max-parallel=3 --run-in-band --code-coverage --max-warnings=0",
+    "test:all": "nx run-many --all --target=test --ci --passWithNoTests --parallel --max-parallel=3 --run-in-band --code-coverage",
     "test:ci": "nx affected --target=test --base=remotes/origin/develop --parallel",
     "lint": "nx lint",
-    "lint:all": "nx run-many --all --target=lint --parallel --max-parallel=3 --max-warnings=0",
+    "lint:all": "nx run-many --all --target=lint --parallel --max-parallel=3",
     "lint:ci": "nx affected --target=lint --base=remotes/origin/develop --head=HEAD --parallel",
     "e2e:all": "nx run-many --all --target=e2e --headed=false --watch=false",
     "e2e:ci": "nx affected --target=e2e --base=remotes/origin/develop --parallel --headed=false --watch=false",
@@ -23,8 +23,8 @@
     "affected:build": "nx affected:build --configuration=production",
     "affected:e2e": "nx affected:e2e --port='cypress-auto'",
     "affected:e2e:watch": "nx affected:e2e --watch",
-    "affected:test": "nx affected:test --parallel --max-parallel=3 --run-in-band --max-warnings=0",
-    "affected:lint": "nx affected:lint --parallel --max-parallel=3 --verbose --cache --max-warnings=0",
+    "affected:test": "nx affected:test --parallel --max-parallel=3 --run-in-band",
+    "affected:lint": "nx affected:lint --parallel --max-parallel=3 --verbose --cache",
     "affected:dep-graph": "nx affected:dep-graph",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
@@ -33,11 +33,11 @@
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "husky-install": "npx husky install",
+    "husky-install": "npx husky",
     "clean": "rimraf node_modules",
-    "clean:all": "rimraf node_modules dist dll && yarn cache clean --force",
+    "clean:all": "rm -rf node_modules dist && yarn cache clean",
     "clean:dist": "rimraf dist",
-    "install:local": "yarn husky-install && yarn clean:all && yarn install --frozen-lockfile",
+    "install:local": "yarn husky-install && yarn clean:all && yarn install --immutable",
     "markdownlint": "markdownlint *.md",
     "branch:lint": "branch-name-lint branchNameLint.json",
     "nasa-images:serve": "nx run nasa-images:serve",
@@ -82,6 +82,7 @@
     "@angular/common": "~18.1.0",
     "@angular/compiler": "~18.1.0",
     "@angular/core": "~18.1.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "~18.1.0",
     "@angular/material": "18.1.3",
     "@angular/material-moment-adapter": "18.1.3",
@@ -94,14 +95,16 @@
     "@ngrx/component-store": "18.0.2",
     "@ngrx/effects": "18.0.2",
     "@ngrx/entity": "18.0.2",
-    "@ngrx/operators": "^18.0.0",
+    "@ngrx/operators": "^18.0.2",
     "@ngrx/router-store": "18.0.2",
+    "@ngrx/signals": "^18.0.2",
     "@ngrx/store": "18.0.2",
     "@ngx-formly/core": "^6.3.6",
     "@ngx-formly/material": "^6.3.6",
     "@nx/angular": "19.5.6",
     "angular-svg-icon": "^18.0.1",
     "babel-loader": "^8.0.2",
+    "firebase": "^10.12.5",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -123,6 +126,7 @@
     "@ngrx/schematics": "18.0.2",
     "@ngrx/store-devtools": "18.0.2",
     "@ngx-formly/schematics": "^6.3.6",
+    "@nrwl/cli": "15.9.3",
     "@nx/cypress": "19.5.6",
     "@nx/eslint": "19.5.6",
     "@nx/eslint-plugin": "19.5.6",
@@ -186,6 +190,5 @@
     "cz-customizable": {
       "config": ".cz-config.js"
     }
-  },
-  "packageManager": "yarn@4.4.0"
+  }
 }
